HHH-9492 - Migrate to new bootstrap API (MetadataSources, etc) - Gunnar's feedback